<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hasta.echo.MainActivity" >

    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/remove"/>
    <item
        android:id="@+id/info"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/guide"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/guide"/>
    <item
        android:id="@+id/check_script"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/check_script"/>
</menu>
