<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    
    <EditText
        android:hint="@string/value_hint"
        android:inputType="textMultiLine"
        android:id="@+id/write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:layout_marginTop="60sp"
        android:textSize="15sp"
        android:textAlignment="center"/>
    
    <EditText
        android:hint="@string/path_hint"
        android:inputType="textMultiLine"
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:layout_marginTop="15sp"
        android:textSize="15sp"
        android:textAlignment="center"/>
    
<Button android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/tap" android:id="@+id/send"
        android:layout_gravity="center" android:layout_marginTop="15sp"/>
</LinearLayout>
